<resources>
    <string name="app_name">BuscaminasVersion-0.0.1</string>
    <string name="buscaminas">Buscaminas</string>
    <string name="facil">Facil</string>
    <string name="medio">Medio</string>
    <string name="dificil">Dificil</string>
    <string name="jugar">Jugar</string>
    <string name="nivel">Nivel</string>
    <string name="dificultad">Dificultad</string>
    <string name="atras">Atras</string>
    <string name="button">Button</string>
    <string name="game_over">GAME OVER</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="todo">TODO</string>
    <string name="pruebas">Pruebas</string>
</resources>